<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/dialogPaddingAround"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/phoneNumberText"
        android:text="@string/phoneNumber"
        android:textSize="@dimen/dialogHeaderTextSize"
        android:textColor="@color/dialogTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/phoneNumberField"
        android:hint="@string/phoneNumberHint"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/emailText"
        android:text="@string/email"
        android:textSize="@dimen/dialogHeaderTextSize"
        android:textColor="@color/dialogTextColor"
        android:layout_marginTop="@dimen/dialogMarginBetween"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/emailField"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>