<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.angelwing.fling.MainActivity">

    <Button
        android:id="@+id/flingButton"
        android:text="@string/app_name"
        android:onClick="fling"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:padding="@dimen/margin"
        android:layout_alignParentTop="true"
        android:layout_above="@id/flingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/flingToText"
                android:text="@string/flingTo"
                android:textColor="@color/defaultTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/newRecipientInsert"
                android:orientation="vertical"
                android:layout_below="@id/flingToText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/addRecipientButton"
                android:onClick="addRecipient"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/newRecipientInsert"
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize" />

            <TextView
                android:id="@+id/myInfoText"
                android:text="@string/myInfo"
                android:textColor="@color/defaultTextColor"
                android:layout_below="@id/addRecipientButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/newInfoInsert"
                android:orientation="vertical"
                android:layout_below="@id/myInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/addInfoButton"
                android:onClick="addInfo"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/newInfoInsert"
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
